[tool.poetry]
name = "oca-utils"
version = "0.0.0"
description = "OCA Utils"
authors = ["Daniel Thonon <d.thonon9@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dthonon/oca-utils"
repository = "https://github.com/dthonon/oca-utils"
documentation = "https://oca-utils.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/dthonon/oca-utils/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"
exif = "^1.6.0"
xmltodict = "^0.13.0"
types-xmltodict = "^0.13.0.3"
deface = "^1.5.0"
onnx = "^1.14.1"
onnxruntime-gpu = "^1.16.1"
unidecode = "^1.3.7"
python-ffmpeg = "^2.0.10"
matplotlib = "^3.8.2"
plotbitrate = "^1.1.2.0"
pyexiftool = "^0.5.6"
pyyaml = "^6.0.1"
rich = "^13.7.1"
types-pyyaml = "^6.0.12.20240311"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=1.4"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=7.1.2"
pyupgrade = ">=2.29.1"
safety = ">=2.3.5"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
oca-utils = "oca_utils.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["oca_utils", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
